# virtual-prompt-wars-smart-stadium

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  config.py  main.py
app/data/: venue.json
app/middleware/: __init__.py  rate_limiter.py
app/models/: __init__.py  requests.py  sustainability.py  venue.py
app/routes/: __init__.py  accessibility.py  crowd.py  errors.py  sustainability.py  transport.py  wayfinding.py
app/services/: __init__.py  accessibility.py  crowd.py  gemini.py  i18n.py  llm.py  repository.py  sustainability.py  transport.py  venue_repository.py  wayfinding.py
app/static/css/: style.css
app/static/js/: accessibility.js  api.js  dashboard.js  gate-status.js  sustainability.js  transport.js  wayfinding.js
app/templates/: base.html  dashboard.html  index.html
docs/: accessibility-report.md  decisions.md
tests/: conftest.py  test_accessibility.py  test_api_validation.py  test_crowd.py  test_gemini.py  test_i18n.py  test_integration.py  test_llm.py  test_pages.py  test_rate_limit.py  test_repository.py  test_routes.py  test_sustainability.py  test_transport.py  test_wayfinding.py  test_wayfinding_properties.py
tests/e2e/: conftest.py  test_accessibility_scan.py  test_navigation.py
