[project]
name = "matchday-ai"
version = "1.0.0"
description = "MatchDay AI — a smart-stadium fan assistant and staff operations dashboard (FastAPI + Gemini)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "C90", "SIM", "RUF"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not e2e'"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end browser tests (require Playwright browsers; deselected by default, run with -m e2e)",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.interrogate]
fail-under = 100
